--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,13 +112,13 @@
         tools:text="00:00"
         tools:visibility="visible" />
 
-
     <ImageView
         android:id="@+id/last_photo_video_preview"
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
+        android:background="@drawable/camera_button_background"
         android:contentDescription="@string/view_last_media"
-        android:padding="@dimen/medium_margin"
+        android:padding="@dimen/tiny_margin"
         app:layout_constraintBottom_toBottomOf="@id/shutter"
         app:layout_constraintEnd_toStartOf="@id/shutter"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -142,8 +142,9 @@
         android:id="@+id/toggle_camera"
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
+        android:background="@drawable/camera_button_background"
         android:contentDescription="@string/toggle_camera"
-        android:padding="@dimen/normal_margin"
+        android:padding="@dimen/medium_margin"
         android:src="@drawable/ic_flip_camera_vector"
         app:layout_constraintBottom_toBottomOf="@id/shutter"
         app:layout_constraintEnd_toEndOf="parent"
