--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -126,14 +126,14 @@
                 layout="@layout/divider" />
 
             <TextView
-                android:id="@+id/settings_shutter_label"
+                android:id="@+id/settings_camera_label"
                 style="@style/SettingsSectionLabelStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/shutter" />
+                android:text="@string/app_launcher_name" />
 
             <LinearLayout
-                android:id="@+id/settings_shutter_holder"
+                android:id="@+id/settings_camera_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -185,7 +185,7 @@
             </LinearLayout>
 
             <include
-                android:id="@+id/settings_shutter_divider"
+                android:id="@+id/settings_camera_divider"
                 layout="@layout/divider" />
 
             <TextView
