feat: add max screen brightness option (#242)
* feat: add max screen brightness option

* build: update jitpack url

* refactor: rename shutter settings section to camera settings

* docs: update changelog

Refs: https://github.com/FossifyOrg/Camera/issues/234

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -126,14 +126,14 @@
                 layout="@layout/divider" />
 
             <TextView
-                android:id="@+id/settings_shutter_label"
+                android:id="@+id/settings_camera_label"
                 style="@style/SettingsSectionLabelStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/shutter" />
+                android:text="@string/app_launcher_name" />
 
             <LinearLayout
-                android:id="@+id/settings_shutter_holder"
+                android:id="@+id/settings_camera_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -167,10 +167,25 @@
                         android:text="@string/volume_buttons_as_shutter" />
 
                 </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/settings_max_brightness_holder"
+                    style="@style/SettingsHolderCheckboxStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <org.fossify.commons.views.MyMaterialSwitch
+                        android:id="@+id/settings_max_brightness"
+                        style="@style/SettingsSwitchStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/max_brightness" />
+
+                </RelativeLayout>
             </LinearLayout>
 
             <include
-                android:id="@+id/settings_shutter_divider"
+                android:id="@+id/settings_camera_divider"
                 layout="@layout/divider" />
 
             <TextView
